argocd/clusters/wheatley/live/photoprism/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
