argocd/clusters/wheatley/live/photoprism/photoprism-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: photoprism
      app.kubernetes.io/instance: photoprism
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: photoprism
        app.kubernetes.io/instance: photoprism
        app: photoprism
    spec:
      serviceAccountName: photoprism
      terminationGracePeriodSeconds: 5
      containers:
      - name: photoprism
        image: photoprism/photoprism:20211215
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
          - mountPath: /storage/import
            name: import
          - mountPath: /storage/originals
            name: originals
          - mountPath: /storage/cache
            name: storage
      volumes:
      - name: originals
        nfs:
          path: /zpool1/photoprism-data
          server: 172.18.5.5
      - name: import
        readOnly: true
        nfs:
          path: /zpool1/Allie-GooglePhotos
          server: 172.18.5.5
      - name: storage
        nfs:
          path: /ssd/photoprism-cache
          server: 172.18.5.5
