argocd/clusters/wheatley/live/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
  - port: 2342
    protocol: TCP
    targetPort: 2342
  selector:
    app: photoprism
  sessionAffinity: None
  type: ClusterIP
