argocd/clusters/wheatley/live/photoprism/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    signal9-internal: ""
  name: photoprism
  namespace: photoprism
spec:
  host: photoprism.int-apps.wheatley.lab.signal9.gg
  port:
    targetPort: 2342
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: photoprism
    weight: 100
  wildcardPolicy: None
